kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: jitbit-pod
  labels:
    app: jitbit
spec:
  containers:
    - name: jitbit
      image: "754256621582.dkr.ecr.eu-west-2.amazonaws.com/hmpps-migration/hmpps-community-rehabilitation-ancilliary-jitbit-dev-ecr:0.2"
      imagePullPolicy: Always
      ports:
        - containerPort: 5000
          protocol: TCP
      volumeMounts:
        - mountPath: /jitbit/appsettings.json
          name: jitbit-appsettings-volume
          subPath: appsettings.json
  volumes:
    - name: jitbit-appsettings-volume
      secret:
        secretName: jitbit-dev-appsettings-secret
