kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jitbit-dev-service
  labels:
    app: jitbit-dev-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      name: http
      targetPort: 5000
  selector:
    app: jitbit
